k8s/test-app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: test-app
  namespace: default
  labels:
    app: test-app
spec:
  selector:
    app: test-app
  ports:
    - port: 80
      targetPort: 8080
